--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,10 +3,8 @@
   <head>
     <title>{{ title }}</title>
     <meta charset="utf-8">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="format-detection" content="telephone=no, email=no"/>
     <meta name="theme-color" content="#f60">
+    {{{ meta }}}
   </head>
   <script>
     siteType = '{{ siteType }}';
