--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,6 +3,11 @@
   <head>
     <title>{{ title }}</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+    <meta name="apple-itunes-app" content="app-id=1319173852, app-argument=lanehub://homepage/1">
+    <!-- iconfont -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_687718_a6xx9ohgqvs.css">
+    <script src="//at.alicdn.com/t/font_687718_wevpwo3gom.js"></script>
     {{{ meta }}}
   </head>
   <script>
