--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,6 +7,9 @@
     <!-- iconfont -->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_687718_9buklbuj00r.css">
     <script src="//at.alicdn.com/t/font_687718_2cyrvl72emf.js"></script>
+    <script>
+      !function (e, t) { var n, i = document, d = window, o = i.documentElement, l = document.createElement("style"); function r() { var n = o.getBoundingClientRect().width; n > (t = t || 540) && (n = t); var i = 100 * n / e; l.innerHTML = "html{font-size:" + i + "px;}" } if (o.firstElementChild) o.firstElementChild.appendChild(l); else { var a = i.createElement("div"); a.appendChild(l), i.write(a.innerHTML), a = null } r(), d.addEventListener("resize", function () { clearTimeout(n), n = setTimeout(r, 300) }, !1), d.addEventListener("pageshow", function (e) { e.persisted && (clearTimeout(n), n = setTimeout(r, 300)) }, !1), "complete" === i.readyState ? i.body.style.fontSize = "16px" : i.addEventListener("DOMContentLoaded", function (e) { i.body.style.fontSize = "16px" }, !1) }(750, 750);
+    </script>
   </head>
   <script>
     siteType = '{{ siteType }}';
